# highlightai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/highlightai/: __init__.py  cli.py  models.py  report.py  simulator.py
src/highlightai/detector/: __init__.py  audio.py  events.py  excitement.py
src/highlightai/editor/: __init__.py  clipper.py  compiler.py  ranker.py
tests/: test_audio.py  test_benchmark.py  test_clipper.py  test_compiler.py  test_core.py  test_events.py  test_excitement.py  test_integration.py  test_models.py  test_ranker.py  test_simulator.py
